[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Nodes/TextToolEdit.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/dark/theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/graphics/misc/value_arrow.svg" type="Texture" id=3]
[ext_resource path="res://assets/graphics/misc/value_arrow_hover.svg" type="Texture" id=4]
[ext_resource path="res://assets/graphics/misc/value_arrow_press.svg" type="Texture" id=5]

[node name="TextToolEdit" type="TextEdit"]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )
theme_type_variation = "TextToolEdit"
script = ExtResource( 1 )

[node name="Drag" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -5.0
margin_right = 5.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 3

[connection signal="text_changed" from="." to="." method="_on_TextToolEdit_text_changed"]
[connection signal="button_down" from="Drag" to="." method="_on_Drag_button_down"]
[connection signal="button_up" from="Drag" to="." method="_on_Drag_button_up"]
[connection signal="gui_input" from="Drag" to="." method="_on_Drag_gui_input"]
